--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ run:
 tools:
   cre: "~/crg2-pacbio/scripts/cre"
   crg: "~/crg"
-  crg2-pacbio: "~/crg2-pacbio"
+  crg2_pacbio: "~/crg2-pacbio"
 
 ref:
   name: GRCh38.86
@@ -29,7 +29,6 @@ annotation:
      database_path: "/hpf/largeprojects/ccmbio/nhanafi/c4r/downloads/databases/"
 
 trgt:
-  vcf_path: ""
   samples: "samples.tsv"
   ensembl_gtf: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread/TRGT/proband_only_workflow/annotations/Homo_sapiens.GRCh38.109.chr.gtf.gz"
   gnomad_constraint: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread/TRGT/proband_only_workflow/annotations/gnomad.v4.0.constraint_metrics.tsv"
