--- a/config.yaml
+++ b/config.yaml
@@ -41,6 +41,8 @@ annotation:
       inhouse: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread/SV_database/pbsv.allsamples.counts.2022-04-19.bed"
       c4r: True # if samples belong to C4R, annotate against C4R pbsv SV database
       anno_path: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread/annotate_SV/annotations/"
+  pathogenic_repeats:
+      disease_thresholds: "/hpf/largeprojects/ccm_dccforge/dccdipg/Common/annotation/ExpansionHunter/tandem_repeat_disease_loci_v1.1.tsv"
 
 params:
   snpeff:
