remove AC_Het and AC_Hom

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -160,8 +160,8 @@ ops=["self","self"]
 [[annotation]]
 file="CoLoRSdb.GRCh38.v1.0.0.deepvariant.glnexus.vcf.gz"
 fields=["AF", "AC", "AC_Het", "AC_Hom", "AC_Hemi", "nhomalt"]
-names=["CoLoRSdb_AF", "CoLoRSdb_AC", "CoLoRSdb_AC_Het", "CoLoRSdb_AC_Hom", "CoLoRSdb_AC_Hemi", "CoLoRSdb_nhomalt"]
-ops=["self","self","self","self","self","self"]
+names=["CoLoRSdb_AF", "CoLoRSdb_AC", "CoLoRSdb_AC_Hemi", "CoLoRSdb_nhomalt"]
+ops=["self","self","self","self"]
 
 #C4R WGS counts and samples
 [[annotation]]
