generate panel report based on genes derived from HPO list

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -142,33 +142,12 @@ columns = [4]
 names = ["tf_binding_sites"]
 ops=["concat"]
 
-# HPRC PacBio small variant calls
-[[annotation]]
-file="hprc.GRCh38.deepvariant.glnexus.fixswap.fixploidy.norm.fill_tags.add_nhomalt.vcf.gz"
-fields=["AF", "AC", "nhomalt"]
-names=["hprc_af", "hprc_ac","hprc_hom"]
-ops=["self","self","self"]
-
-# CMH PacBio small variant calls
-[[annotation]]
-file="pb_joint_merged.snv.vcf.gz"
-fields=["AF", "AC"]
-names=["cmh_af", "cmh_ac"]
-ops=["self","self"]
-
 # CoLoRSdb small variant calls
 [[annotation]]
 file="CoLoRSdb.GRCh38.v1.0.0.deepvariant.glnexus.vcf.gz"
-fields=["AF", "AC", "AC_Het", "AC_Hom", "AC_Hemi", "nhomalt"]
+fields=["AF", "AC", "AC_Hemi", "nhomalt"]
 names=["CoLoRSdb_AF", "CoLoRSdb_AC", "CoLoRSdb_AC_Hemi", "CoLoRSdb_nhomalt"]
 ops=["self","self","self","self"]
-
-#C4R WGS counts and samples
-[[annotation]]
-file="C4R_genome_counts_sorted_LIFTED.tsv.gz"
-columns = [5,6]
-names = ["c4r_wgs_samples", "c4r_wgs_counts"]
-ops=["first", "first"]
 
 #Dark Genes
 [[annotation]]
