add noncoding scores and alpha missense

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -149,9 +149,37 @@ fields=["AF", "AC", "AC_Hemi", "nhomalt"]
 names=["CoLoRSdb_AF", "CoLoRSdb_AC", "CoLoRSdb_AC_Hemi", "CoLoRSdb_nhomalt"]
 ops=["self","self","self","self"]
 
-#Dark Genes
+# Dark Genes
 [[annotation]]
 file = "Alliance_Dark_Genes_LR_Pnl_TargetsCaptured_hg38_ann.bed.gz"
 columns = [4]
 names = ["Dark_genes"]
 ops = ["self"]
+
+# AlphaMissense
+[[annotation]]
+file="AlphaMissense_hg38.tsv.gz"
+columns = [9]
+names = ["AlphaMissense"]
+ops=["first"]
+
+# ncER
+[[annotation]]
+file = "GRCh38_ncER_perc.bed.gz"
+names = ["ncER"]
+columns = [4]
+ops = ["max"]
+
+# ReMM
+[[annotation]]
+file = "ReMM.v0.4.hg38.tsv.gz"
+names = ["ReMM"]
+columns = [3]
+ops = ["max"]
+
+# LINSIGHT
+[[annotation]]
+file = "GRCh38_LinSight.bed.gz"
+names = ["LinSight_Score"]
+columns = [4]
+ops = ["max"]
