--- a/wrappers/multiqc/environment.yaml
+++ b/wrappers/multiqc/environment.yaml
@@ -3,6 +3,6 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - Python ==3.7
-  - NanoPlot ==1.44.1
-  
+  - multiqc ==1.20
+  - python ==3.8
+  - pyyaml ==5.4.1
