--- a/wrappers/nanoplot/environment.yaml
+++ b/wrappers/nanoplot/environment.yaml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - Python ==3.7
+  - Python >=3.10
   - NanoPlot ==1.44.1
+  - pandas ==2.2.2
   
