add TG allele counts and noncoding scores

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -149,6 +149,13 @@ fields=["AF", "AC", "AC_Hemi", "nhomalt"]
 names=["CoLoRSdb_AF", "CoLoRSdb_AC", "CoLoRSdb_AC_Hemi", "CoLoRSdb_nhomalt"]
 ops=["self","self","self","self"]
 
+# TG inhouse db
+[[annotation]]
+file="TG_genomes_with_AC_samples_capped.tsv.gz"
+columns=[5,6]
+names=["tg_lrwgs_samples", "tg_lrwgs_ac"]
+ops=["first","first"]
+
 # Dark Genes
 [[annotation]]
 file = "Alliance_Dark_Genes_LR_Pnl_TargetsCaptured_hg38_ann.bed.gz"
