add promoterAI scores

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -190,3 +190,10 @@ file = "GRCh38_LinSight.bed.gz"
 names = ["LinSight_Score"]
 columns = [4]
 ops = ["max"]
+
+# PromoterAI
+[[annotation]]
+file = "promoterAI_tss500.tsv.gz"
+names = ["promoterAI"]
+columns = [10]
+ops = ["self"]
