add regeneron million exome AF and AC

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -7,6 +7,12 @@ names=["gnomad_ac", "gnomad_hom","gnomad_af","gnomad_af_grpmax","gnomad_an","gno
 ops=["self","self","self","self","self","self","self","self"]
 
 [[annotation]]
+file="rgc_me_merged.vcf.gz"
+fields=["ALL_AC", "ALL_AF"]
+names=["regeneron_exome_AC", "regeneron_exome_AF"]
+ops=["self","self"]
+
+[[annotation]]
 file="dbsnp-151.vcf.gz"
 fields=["ID"]
 names=["rs_ids"]
