--- a/config.yaml
+++ b/config.yaml
@@ -55,6 +55,7 @@ annotation:
       cnv_inhouse_tg: "/hpf/largeprojects/tgnode/sandbox/mcouse_analysis/results/LRWGS_CNV_db/hificnv.allsamples.counts.2025-12-17.bed"
       anno_path: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread_pilot_phase_1/annotate_SV/annotations/"
       gnomad_SV: "/hpf/largeprojects/tgnode/sandbox/mcouse_analysis/annotations/gnomad4.1_SV/gnomad.v4.1.sv.sites.processed.bed"
+      dgv: "/hpf/largeprojects/tgnode/sandbox/mcouse_analysis/annotations/DGV/DGV.GS.hg38.tsv"
       colorsdb: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread_pilot_phase_2/data/CoLoRSdb/v1.1.0/CoLoRSdb.GRCh38.v1.1.0.pbsv.jasmine.bed"
   pathogenic_repeats:
       trgt_catalog: "/hpf/largeprojects/ccmbio/ccmmarvin_shared/pacbio_longread_pilot_phase_1/TRGT/repeat_definitions/STRchive-disease-loci.hg38.TRGT.expanded.bed"
