add TG num hom to small variants

--- a/vcfanno/pacbio.vcfanno.conf
+++ b/vcfanno/pacbio.vcfanno.conf
@@ -115,10 +115,10 @@ ops=["self","self","self","self"]
 
 # TG inhouse db
 [[annotation]]
-file="TG_genomes_with_AC_samples_capped.tsv.gz"
-columns=[5,6]
-names=["tg_lrwgs_samples", "tg_lrwgs_ac"]
-ops=["first","first"]
+file="TG_genomes_with_AC_samples_capped_2025-12-10.tsv.gz"
+columns=[5,6,8]
+names=["tg_lrwgs_samples", "tg_lrwgs_ac", "tg_lrwgs_hom"]
+ops=["first","first", "first"]
 
 # Dark Genes
 [[annotation]]
