--- a/config.yaml
+++ b/config.yaml
@@ -71,6 +71,9 @@ methbat:
   regions: "/hpf/largeprojects/ccm_dccforge/dccdipg/Common/annotation_hg38/methylation/hg38_200bp_tiles.tsv"
   regions_bed: "/hpf/largeprojects/ccm_dccforge/dccdipg/Common/annotation_hg38/methylation/hg38_200bp_tiles.bed"
 
+qc:
+  svdp: "/hpf/largeprojects/ccm_dccforge/dccdipg/Common/annotation_hg38/QC/1000g.phase3.100k.b38.vcf.gz.dat"
+
 pbcpgtools:
   binary: "/hpf/largeprojects/ccm_dccforge/dccdipg/Common/crg2-pacbio-non-conda-tools/pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu/bin/aligned_bam_to_cpg_scores"
   model: "/hpf/largeprojects/ccm_dccforge/dccdipg/Common/crg2-pacbio-non-conda-tools/pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu/models/pileup_calling_model.v1.tflite"
