--- a/rules/multiqc_config.yaml
+++ b/rules/multiqc_config.yaml
@@ -8,3 +8,38 @@ remove_sections:
 table_columns_visible:
   verifybamid-results_table:
     verifybamid-READS: false
+custom_data:
+  peddy_relatedness:
+    file_format: tsv
+    section_name: "Peddy Relatedness"
+    description: "Rate of allele sharing between samples (higher indicates greater relatedness)."
+    plot_type: table
+    pconfig:
+      namespace: peddy_relatedness
+      sort_rows: false
+      col1_header: Pair_ID
+    headers:
+      Pair_ID:
+        title: Pair
+      Sample_A:
+        title: Sample A
+      Sample_B:
+        title: Sample B
+      Peddy_Relatedness:
+        title: Relatedness
+        format: "{:.3f}"
+        scale: "Spectral"
+        min: 0
+        max: 0
+plots_force_interactive: true
+report_section_order:
+  peddy_relatedness:
+    order: 1000
+table_cond_formatting_rules:
+  peddy_relatedness-Peddy_Relatedness:
+    fail:
+      - gt: 0.5
+    warn:
+      - gt: 0.25
+    pass:
+      - lt: 0.25
